--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "nodejs",
   "version": "1.0.0",
   "description": "explore nodejs",
-  "main": "server.js",
+  "main": "src/bin/server.js",
   "scripts": {
-    "test": "test"
+    "test": "jasmine JASMINE_CONFIG_PATH=test/jasmine.json"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,14 @@
     "url": "https://github.com/Praveentps/nodejs/issues"
   },
   "homepage": "https://github.com/Praveentps/nodejs#readme",
+
   "dependencies": {
-    "winston": "^2.2.0"
+    "express": "~4.10.2",
+    "winston": "^2.2.0",
+    "request": "~2.12.0",
+  },
+  "devDependencies": {
+    "assert": "^1.4.0",
+    "expect": "^1.20.1"
   }
 }
