--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "express": "~4.10.2",
     "winston": "^2.2.0",
-    "request": "~2.12.0",
+    "request": "~2.12.0"
   },
   "devDependencies": {
     "assert": "^1.4.0",
