--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "url": "https://github.com/Praveentps/nodejs/issues"
   },
   "homepage": "https://github.com/Praveentps/nodejs#readme",
-
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "~4.10.2",
-    "winston": "^2.2.0",
-    "request": "~2.12.0"
+    "mongoose": "^4.13.7",
+    "path": "^0.12.7",
+    "request": "~2.12.0",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "assert": "^1.4.0",
